# frnog-36-graphql-ansible

./: .gitignore  README.md  ansible.cfg  demo.nautobot.yml  pb.generate_config.yml  pyproject.toml
templates/: config_template.j2
