[tool.poetry]
name = "frnog-36-graphql-ansible"
version = "0.1.0"
description = ""
authors = ["Damien Garros <dgarros@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ansible-core = "^2.13.4"
pynautobot = "^1.2.0"
netutils = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
